trying to fix scroll issue on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@ body,html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    -webkit-overflow-scrolling: touch
 }
 
 .first {
@@ -22,6 +23,7 @@ body,html {
     background-color:#000;
     position: relative;
     z-index:100;
+    -webkit-overflow-scrolling: touch
 }
 
 h2 {
